src/_build/parser.output
   0  $accept : %entry% $end

   1  const : NUM
   2        | TRUE
   3        | FALSE
   4        | NIL

   5  prim1 : ADD1
   6        | SUB1
   7        | NOT
   8        | PRINT
   9        | ISBOOL
  10        | ISNUM
  11        | ISTUPLE
  12        | PRINTSTACK
  13        | THREAD
  14        | GET
  15        | START

  16  bindings : bind EQUAL expr
  17           | bind EQUAL expr COMMA bindings

  18  namebindings : namebind EQUAL expr
  19               | namebind EQUAL expr COMMA namebindings

  20  expr : LET bindings IN expr
  21       | LET REC namebindings IN expr
  22       | IF expr COLON expr ELSECOLON expr
  23       | BEGIN expr END
  24       | binop_expr SEMI expr
  25       | binop_expr

  26  exprs : expr
  27        | expr COMMA exprs

  28  tuple_expr : LPARENNOSPACE RPAREN
  29             | LPARENSPACE RPAREN
  30             | LPARENNOSPACE expr COMMA RPAREN
  31             | LPARENSPACE expr COMMA RPAREN
  32             | LPARENNOSPACE expr COMMA exprs RPAREN
  33             | LPARENSPACE expr COMMA exprs RPAREN

  34  id : ID

  35  prim2 : PLUS
  36        | MINUS
  37        | TIMES
  38        | AND
  39        | OR
  40        | GREATER
  41        | GREATEREQ
  42        | LESSSPACE
  43        | LESSEQ
  44        | EQEQ

  45  binop_expr : binop_expr prim2 binop_operand
  46             | binop_operand COLONEQ binop_expr
  47             | binop_operand

  48  binop_operand : prim1 LPARENNOSPACE expr RPAREN
  49                | tuple_expr
  50                | binop_operand LBRACK expr RBRACK
  51                | binop_operand LPARENNOSPACE exprs RPAREN
  52                | binop_operand LPARENNOSPACE RPAREN
  53                | LPARENSPACE expr RPAREN
  54                | LPARENNOSPACE expr RPAREN
  55                | LPARENNOSPACE LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN
  56                | LPARENNOSPACE LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN
  57                | LPARENNOSPACE LAMBDA COLON expr RPAREN
  58                | LPARENSPACE LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN
  59                | LPARENSPACE LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN
  60                | LPARENSPACE LAMBDA COLON expr RPAREN
  61                | const
  62                | id

  63  decl : DEF ID LPARENNOSPACE RPAREN COLON expr
  64       | DEF ID LPARENNOSPACE binds RPAREN COLON expr

  65  binds : bind
  66        | bind COMMA binds

  67  bind : namebind
  68       | blankbind
  69       | LPARENNOSPACE binds RPAREN
  70       | LPARENSPACE binds RPAREN

  71  blankbind : UNDERSCORE

  72  namebind : ID
  73           | SHADOW ID

  74  declgroup : decl
  75            | decl ANDDEF declgroup

  76  decls :
  77        | declgroup decls

  78  program : decls expr EOF

  79  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (79)
	decls : .  (76)

	DEF  shift 3
	NUM  reduce 76
	ID  reduce 76
	ADD1  reduce 76
	SUB1  reduce 76
	LPARENSPACE  reduce 76
	LPARENNOSPACE  reduce 76
	LET  reduce 76
	IF  reduce 76
	PRINT  reduce 76
	PRINTSTACK  reduce 76
	TRUE  reduce 76
	FALSE  reduce 76
	ISBOOL  reduce 76
	ISNUM  reduce 76
	ISTUPLE  reduce 76
	NOT  reduce 76
	NIL  reduce 76
	BEGIN  reduce 76
	THREAD  reduce 76
	GET  reduce 76
	START  reduce 76

	program  goto 4
	decl  goto 5
	declgroup  goto 6
	decls  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	decl : DEF . ID LPARENNOSPACE RPAREN COLON expr  (63)
	decl : DEF . ID LPARENNOSPACE binds RPAREN COLON expr  (64)

	ID  shift 8
	.  error


state 4
	%entry% : '\001' program .  (79)

	.  reduce 79


state 5
	declgroup : decl .  (74)
	declgroup : decl . ANDDEF declgroup  (75)

	ANDDEF  shift 9
	NUM  reduce 74
	ID  reduce 74
	DEF  reduce 74
	ADD1  reduce 74
	SUB1  reduce 74
	LPARENSPACE  reduce 74
	LPARENNOSPACE  reduce 74
	LET  reduce 74
	IF  reduce 74
	PRINT  reduce 74
	PRINTSTACK  reduce 74
	TRUE  reduce 74
	FALSE  reduce 74
	ISBOOL  reduce 74
	ISNUM  reduce 74
	ISTUPLE  reduce 74
	NOT  reduce 74
	NIL  reduce 74
	BEGIN  reduce 74
	THREAD  reduce 74
	GET  reduce 74
	START  reduce 74


state 6
	decls : declgroup . decls  (77)
	decls : .  (76)

	DEF  shift 3
	NUM  reduce 76
	ID  reduce 76
	ADD1  reduce 76
	SUB1  reduce 76
	LPARENSPACE  reduce 76
	LPARENNOSPACE  reduce 76
	LET  reduce 76
	IF  reduce 76
	PRINT  reduce 76
	PRINTSTACK  reduce 76
	TRUE  reduce 76
	FALSE  reduce 76
	ISBOOL  reduce 76
	ISNUM  reduce 76
	ISTUPLE  reduce 76
	NOT  reduce 76
	NIL  reduce 76
	BEGIN  reduce 76
	THREAD  reduce 76
	GET  reduce 76
	START  reduce 76

	decl  goto 5
	declgroup  goto 6
	decls  goto 10


state 7
	program : decls . expr EOF  (78)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 34
	binop_expr  goto 35
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 8
	decl : DEF ID . LPARENNOSPACE RPAREN COLON expr  (63)
	decl : DEF ID . LPARENNOSPACE binds RPAREN COLON expr  (64)

	LPARENNOSPACE  shift 39
	.  error


state 9
	declgroup : decl ANDDEF . declgroup  (75)

	DEF  shift 3
	.  error

	decl  goto 5
	declgroup  goto 40


state 10
	decls : declgroup decls .  (77)

	.  reduce 77


state 11
	const : NUM .  (1)

	.  reduce 1


state 12
	id : ID .  (34)

	.  reduce 34


state 13
	prim1 : ADD1 .  (5)

	.  reduce 5


state 14
	prim1 : SUB1 .  (6)

	.  reduce 6


state 15
	tuple_expr : LPARENSPACE . RPAREN  (29)
	tuple_expr : LPARENSPACE . expr COMMA RPAREN  (31)
	tuple_expr : LPARENSPACE . expr COMMA exprs RPAREN  (33)
	binop_operand : LPARENSPACE . expr RPAREN  (53)
	binop_operand : LPARENSPACE . LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN  (58)
	binop_operand : LPARENSPACE . LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN  (59)
	binop_operand : LPARENSPACE . LAMBDA COLON expr RPAREN  (60)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	RPAREN  shift 41
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	LAMBDA  shift 42
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 43
	binop_expr  goto 35
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 16
	tuple_expr : LPARENNOSPACE . RPAREN  (28)
	tuple_expr : LPARENNOSPACE . expr COMMA RPAREN  (30)
	tuple_expr : LPARENNOSPACE . expr COMMA exprs RPAREN  (32)
	binop_operand : LPARENNOSPACE . expr RPAREN  (54)
	binop_operand : LPARENNOSPACE . LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN  (55)
	binop_operand : LPARENNOSPACE . LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN  (56)
	binop_operand : LPARENNOSPACE . LAMBDA COLON expr RPAREN  (57)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	RPAREN  shift 44
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	LAMBDA  shift 45
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 46
	binop_expr  goto 35
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 17
	expr : LET . bindings IN expr  (20)
	expr : LET . REC namebindings IN expr  (21)

	ID  shift 47
	LPARENSPACE  shift 48
	LPARENNOSPACE  shift 49
	SHADOW  shift 50
	REC  shift 51
	UNDERSCORE  shift 52
	.  error

	bindings  goto 53
	bind  goto 54
	namebind  goto 55
	blankbind  goto 56


state 18
	expr : IF . expr COLON expr ELSECOLON expr  (22)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 57
	binop_expr  goto 35
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 19
	prim1 : PRINT .  (8)

	.  reduce 8


state 20
	prim1 : PRINTSTACK .  (12)

	.  reduce 12


state 21
	const : TRUE .  (2)

	.  reduce 2


state 22
	const : FALSE .  (3)

	.  reduce 3


state 23
	prim1 : ISBOOL .  (9)

	.  reduce 9


state 24
	prim1 : ISNUM .  (10)

	.  reduce 10


state 25
	prim1 : ISTUPLE .  (11)

	.  reduce 11


state 26
	prim1 : NOT .  (7)

	.  reduce 7


state 27
	const : NIL .  (4)

	.  reduce 4


state 28
	expr : BEGIN . expr END  (23)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 58
	binop_expr  goto 35
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 29
	prim1 : THREAD .  (13)

	.  reduce 13


state 30
	prim1 : GET .  (14)

	.  reduce 14


state 31
	prim1 : START .  (15)

	.  reduce 15


state 32
	binop_operand : const .  (61)

	.  reduce 61


state 33
	binop_operand : prim1 . LPARENNOSPACE expr RPAREN  (48)

	LPARENNOSPACE  shift 59
	.  error


state 34
	program : decls expr . EOF  (78)

	EOF  shift 60
	.  error


state 35
	expr : binop_expr . SEMI expr  (24)
	expr : binop_expr .  (25)
	binop_expr : binop_expr . prim2 binop_operand  (45)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	EQEQ  shift 64
	LESSSPACE  shift 65
	GREATER  shift 66
	LESSEQ  shift 67
	GREATEREQ  shift 68
	AND  shift 69
	OR  shift 70
	SEMI  shift 71
	NUM  reduce 25
	ID  reduce 25
	DEF  reduce 25
	ANDDEF  reduce 25
	ADD1  reduce 25
	SUB1  reduce 25
	LPARENSPACE  reduce 25
	LPARENNOSPACE  reduce 25
	RPAREN  reduce 25
	RBRACK  reduce 25
	LET  reduce 25
	IN  reduce 25
	COMMA  reduce 25
	IF  reduce 25
	COLON  reduce 25
	ELSECOLON  reduce 25
	EOF  reduce 25
	PRINT  reduce 25
	PRINTSTACK  reduce 25
	TRUE  reduce 25
	FALSE  reduce 25
	ISBOOL  reduce 25
	ISNUM  reduce 25
	ISTUPLE  reduce 25
	NOT  reduce 25
	NIL  reduce 25
	BEGIN  reduce 25
	END  reduce 25
	THREAD  reduce 25
	GET  reduce 25
	START  reduce 25

	prim2  goto 72


state 36
	binop_operand : tuple_expr .  (49)

	.  reduce 49


state 37
	binop_operand : id .  (62)

	.  reduce 62


state 38
	binop_expr : binop_operand . COLONEQ binop_expr  (46)
	binop_expr : binop_operand .  (47)
	binop_operand : binop_operand . LBRACK expr RBRACK  (50)
	binop_operand : binop_operand . LPARENNOSPACE exprs RPAREN  (51)
	binop_operand : binop_operand . LPARENNOSPACE RPAREN  (52)

	LPARENNOSPACE  shift 73
	LBRACK  shift 74
	COLONEQ  shift 75
	NUM  reduce 47
	ID  reduce 47
	DEF  reduce 47
	ANDDEF  reduce 47
	ADD1  reduce 47
	SUB1  reduce 47
	LPARENSPACE  reduce 47
	RPAREN  reduce 47
	RBRACK  reduce 47
	LET  reduce 47
	IN  reduce 47
	COMMA  reduce 47
	PLUS  reduce 47
	MINUS  reduce 47
	TIMES  reduce 47
	IF  reduce 47
	COLON  reduce 47
	ELSECOLON  reduce 47
	EOF  reduce 47
	PRINT  reduce 47
	PRINTSTACK  reduce 47
	TRUE  reduce 47
	FALSE  reduce 47
	ISBOOL  reduce 47
	ISNUM  reduce 47
	ISTUPLE  reduce 47
	EQEQ  reduce 47
	LESSSPACE  reduce 47
	GREATER  reduce 47
	LESSEQ  reduce 47
	GREATEREQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	NOT  reduce 47
	SEMI  reduce 47
	NIL  reduce 47
	BEGIN  reduce 47
	END  reduce 47
	THREAD  reduce 47
	GET  reduce 47
	START  reduce 47


state 39
	decl : DEF ID LPARENNOSPACE . RPAREN COLON expr  (63)
	decl : DEF ID LPARENNOSPACE . binds RPAREN COLON expr  (64)

	ID  shift 47
	LPARENSPACE  shift 48
	LPARENNOSPACE  shift 49
	RPAREN  shift 76
	SHADOW  shift 50
	UNDERSCORE  shift 52
	.  error

	bind  goto 77
	namebind  goto 55
	binds  goto 78
	blankbind  goto 56


state 40
	declgroup : decl ANDDEF declgroup .  (75)

	.  reduce 75


state 41
	tuple_expr : LPARENSPACE RPAREN .  (29)

	.  reduce 29


state 42
	binop_operand : LPARENSPACE LAMBDA . LPARENNOSPACE binds RPAREN COLON expr RPAREN  (58)
	binop_operand : LPARENSPACE LAMBDA . LPARENSPACE binds RPAREN COLON expr RPAREN  (59)
	binop_operand : LPARENSPACE LAMBDA . COLON expr RPAREN  (60)

	LPARENSPACE  shift 79
	LPARENNOSPACE  shift 80
	COLON  shift 81
	.  error


state 43
	tuple_expr : LPARENSPACE expr . COMMA RPAREN  (31)
	tuple_expr : LPARENSPACE expr . COMMA exprs RPAREN  (33)
	binop_operand : LPARENSPACE expr . RPAREN  (53)

	RPAREN  shift 82
	COMMA  shift 83
	.  error


state 44
	tuple_expr : LPARENNOSPACE RPAREN .  (28)

	.  reduce 28


state 45
	binop_operand : LPARENNOSPACE LAMBDA . LPARENNOSPACE binds RPAREN COLON expr RPAREN  (55)
	binop_operand : LPARENNOSPACE LAMBDA . LPARENSPACE binds RPAREN COLON expr RPAREN  (56)
	binop_operand : LPARENNOSPACE LAMBDA . COLON expr RPAREN  (57)

	LPARENSPACE  shift 84
	LPARENNOSPACE  shift 85
	COLON  shift 86
	.  error


state 46
	tuple_expr : LPARENNOSPACE expr . COMMA RPAREN  (30)
	tuple_expr : LPARENNOSPACE expr . COMMA exprs RPAREN  (32)
	binop_operand : LPARENNOSPACE expr . RPAREN  (54)

	RPAREN  shift 87
	COMMA  shift 88
	.  error


state 47
	namebind : ID .  (72)

	.  reduce 72


state 48
	bind : LPARENSPACE . binds RPAREN  (70)

	ID  shift 47
	LPARENSPACE  shift 48
	LPARENNOSPACE  shift 49
	SHADOW  shift 50
	UNDERSCORE  shift 52
	.  error

	bind  goto 77
	namebind  goto 55
	binds  goto 89
	blankbind  goto 56


state 49
	bind : LPARENNOSPACE . binds RPAREN  (69)

	ID  shift 47
	LPARENSPACE  shift 48
	LPARENNOSPACE  shift 49
	SHADOW  shift 50
	UNDERSCORE  shift 52
	.  error

	bind  goto 77
	namebind  goto 55
	binds  goto 90
	blankbind  goto 56


state 50
	namebind : SHADOW . ID  (73)

	ID  shift 91
	.  error


state 51
	expr : LET REC . namebindings IN expr  (21)

	ID  shift 47
	SHADOW  shift 50
	.  error

	namebindings  goto 92
	namebind  goto 93


state 52
	blankbind : UNDERSCORE .  (71)

	.  reduce 71


state 53
	expr : LET bindings . IN expr  (20)

	IN  shift 94
	.  error


state 54
	bindings : bind . EQUAL expr  (16)
	bindings : bind . EQUAL expr COMMA bindings  (17)

	EQUAL  shift 95
	.  error


state 55
	bind : namebind .  (67)

	.  reduce 67


state 56
	bind : blankbind .  (68)

	.  reduce 68


state 57
	expr : IF expr . COLON expr ELSECOLON expr  (22)

	COLON  shift 96
	.  error


state 58
	expr : BEGIN expr . END  (23)

	END  shift 97
	.  error


state 59
	binop_operand : prim1 LPARENNOSPACE . expr RPAREN  (48)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 98
	binop_expr  goto 35
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 60
	program : decls expr EOF .  (78)

	.  reduce 78


state 61
	prim2 : PLUS .  (35)

	.  reduce 35


state 62
	prim2 : MINUS .  (36)

	.  reduce 36


state 63
	prim2 : TIMES .  (37)

	.  reduce 37


state 64
	prim2 : EQEQ .  (44)

	.  reduce 44


state 65
	prim2 : LESSSPACE .  (42)

	.  reduce 42


state 66
	prim2 : GREATER .  (40)

	.  reduce 40


state 67
	prim2 : LESSEQ .  (43)

	.  reduce 43


state 68
	prim2 : GREATEREQ .  (41)

	.  reduce 41


state 69
	prim2 : AND .  (38)

	.  reduce 38


state 70
	prim2 : OR .  (39)

	.  reduce 39


state 71
	expr : binop_expr SEMI . expr  (24)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 99
	binop_expr  goto 35
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 72
	binop_expr : binop_expr prim2 . binop_operand  (45)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 100


state 73
	binop_operand : binop_operand LPARENNOSPACE . exprs RPAREN  (51)
	binop_operand : binop_operand LPARENNOSPACE . RPAREN  (52)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	RPAREN  shift 101
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 102
	binop_expr  goto 35
	exprs  goto 103
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 74
	binop_operand : binop_operand LBRACK . expr RBRACK  (50)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	expr  goto 104
	binop_expr  goto 35
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 75
	binop_expr : binop_operand COLONEQ . binop_expr  (46)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error

	const  goto 32
	prim1  goto 33
	binop_expr  goto 105
	tuple_expr  goto 36
	id  goto 37
	binop_operand  goto 38


state 76
	decl : DEF ID LPARENNOSPACE RPAREN . COLON expr  (63)

	COLON  shift 106
	.  error


state 77
	binds : bind .  (65)
	binds : bind . COMMA binds  (66)

	COMMA  shift 107
	RPAREN  reduce 65


state 78
	decl : DEF ID LPARENNOSPACE binds . RPAREN COLON expr  (64)

	RPAREN  shift 108
	.  error


state 79
	binop_operand : LPARENSPACE LAMBDA LPARENSPACE . binds RPAREN COLON expr RPAREN  (59)

	ID  shift 47
	LPARENSPACE  shift 48
	LPARENNOSPACE  shift 49
	SHADOW  shift 50
	UNDERSCORE  shift 52
	.  error

	bind  goto 77
	namebind  goto 55
	binds  goto 109
	blankbind  goto 56


state 80
	binop_operand : LPARENSPACE LAMBDA LPARENNOSPACE . binds RPAREN COLON expr RPAREN  (58)

	ID  shift 47
	LPARENSPACE  shift 48
	LPARENNOSPACE  shift 49
	SHADOW  shift 50
	UNDERSCORE  shift 52
	.  error

	bind  goto 77
	namebind  goto 55
	binds  goto 110
	blankbind  goto 56


state 81
	binop_operand : LPARENSPACE LAMBDA COLON . expr RPAREN  (60)

	NUM  shift 11
	ID  shift 12
	ADD1  shift 13
	SUB1  shift 14
	LPARENSPACE  shift 15
	LPARENNOSPACE  shift 16
	LET  shift 17
	IF  shift 18
	PRINT  shift 19
	PRINTSTACK  shift 20
	TRUE  shift 21
	FALSE  shift 22
	ISBOOL  shift 23
	ISNUM  shift 24
	ISTUPLE  shift 25
	NOT  shift 26
	NIL  shift 27
	BEGIN  shift 28
	THREAD  shift 29
	GET  shift 30
	START  shift 31
	.  error
